src/network/access/qnetworkdiskcache_p.h
@@ -20,20 +20,16 @@
 
 #include <qbuffer.h>
 #include <qhash.h>
-#include <qtemporaryfile.h>
+#include <qsavefile.h>
 
 QT_REQUIRE_CONFIG(networkdiskcache);
 
 QT_BEGIN_NAMESPACE
 
-class QFile;
-
 class QCacheItem
 {
 public:
-    QCacheItem() : file(nullptr)
-    {
-    }
+    QCacheItem() = default;
     ~QCacheItem()
     {
         reset();
@@ -41,7 +37,7 @@ public:
 
     QNetworkCacheMetaData metaData;
     QBuffer data;
-    QTemporaryFile *file;
+    QSaveFile *file = nullptr;
     inline qint64 size() const
         { return file ? file->size() : data.size(); }
 
@@ -51,9 +47,9 @@ public:
         delete file;
         file = nullptr;
     }
-    void writeHeader(QFile *device) const;
-    void writeCompressedData(QFile *device) const;
-    bool read(QFile *device, bool readData);
+    void writeHeader(QFileDevice *device) const;
+    void writeCompressedData(QFileDevice *device) const;
+    bool read(QFileDevice *device, bool readData);
 
     bool canCompress() const;
 };
@@ -69,7 +65,6 @@ public:
 
     static QString uniqueFileName(const QUrl &url);
     QString cacheFileName(const QUrl &url) const;
-    QString tmpCacheFileName() const;
     bool removeFile(const QString &file);
     void storeItem(QCacheItem *item);
     void prepareLayout();
